fixed post image overflow

--- a/react-app/src/components/postModal/modalPost.css
+++ b/react-app/src/components/postModal/modalPost.css
@@ -33,6 +33,7 @@ body{
     display: flex;
     flex-direction: column;
     width: 50%;
+    overflow: hidden;
     background-color: black;
     justify-content: center;
 }
